off section added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  
+
+  <!-- header section start -->
+  <header class="header">
+
+    <div class="banner">
+      <h3>Happy New Year</h3>
+      <h1>New Year Party Celebration</h1>
+      
+    </div>
+
+  </header>
+
+  <!-- main section start -->
+  <main>
+    <section class="off-section">
+      <div class="off-container">
+        <h2>65% OFF</h2>
+        <h4>OUR HOLIDAY DEALS ARE BETTER</h4>
+        <h3>ALL CATEGORIES</h3>
+      </div>
+      
+      <img class="off-container-img" src="images/New Year Photo.png" alt="">
+    </section>
+  </main>
+
+  <!-- footer section start -->
+
+  <footer>
+
+  </footer>
 </body>
 </html>
